implemented CRUD for items
